--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -33,6 +33,27 @@
   color: $pink;
 }
 
+.contact__item-email {
+  &:hover {
+    color: $dark-blue;
+    text-decoration: underline;
+  }
+
+  &:active {
+    color: rgba(40, 54, 69, 0.3);
+  }
+}
+
+.contacts__map {
+  width: 100%;
+  height: 200px;
+  margin: 0 auto;
+  background:
+    url("../img/bg-triangle-white-footer.svg") no-repeat top center,
+    url("../img/bg-map-mobile@1x.png") no-repeat center;
+  background-size: 340px, auto;
+}
+
 @media (min-width: 700px) {
   .contacts__wrapper {
     flex-direction: row;
@@ -46,6 +67,14 @@
   .contacts__item {
     width: 250px;
     flex-grow: 1;
+  }
+
+  .contacts__map {
+    height: 378px;
+    background:
+      url("../img/bg-triangle-white-footer.svg") no-repeat top center,
+      url("../img/bg-map-tablet@1x.jpg") no-repeat center;
+    background-size: 720px, auto;
   }
 }
 
@@ -64,6 +93,14 @@
 
   .contacts__item:last-child {
     order: 2;
+  }
+
+  .contacts__map {
+    height: 500px;
+    background:
+      url("../img/bg-triangle-white-footer.svg") no-repeat top center,
+      url("../img/bg-map-desktop@1x.jpg") no-repeat center;
+    background-size: 1200px, auto;
   }
 
 }
