--- a/sass/blocks/contest-form.scss
+++ b/sass/blocks/contest-form.scss
@@ -5,7 +5,15 @@
 
 .contest-form__fieldset-wrapper-1, .contest-form__fieldset-wrapper-2 {
   background-color: $grey-bg;
-  padding-top: 30px;
+  padding-top: 40px;
+}
+
+.contest-form__fieldset-wrapper-1 {
+  padding-top: 50px;
+}
+
+.contest-form__fieldset-wrapper-2 {
+  padding-top: 45px;
 }
 
 .contest-form__list {
@@ -15,7 +23,8 @@
 }
 
 .contest-form__list-item {
-  margin-bottom: 40px;
+  position: relative;
+  margin-bottom: 52px;
 }
 
 .contest-form__full-name {
@@ -33,13 +42,14 @@
 }
 
 .contest-form__contacts {
+  position: relative;
   box-sizing: border-box;
   width: $width;
   align-self: center;
   padding: 0;
   margin: 0;
-  margin-top: 35px;
-  margin-bottom: 40px;
+  margin-bottom: 35px;
+  padding-top: 30px;
   border-style: none;
 }
 
@@ -51,6 +61,7 @@
 .contest-form__contacts-wrapper {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .contest-form__contacts .contest-form__title {
@@ -58,14 +69,17 @@
 }
 
 .contest-form__achievements {
+  position: relative;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  padding-top: 35px;
   border-style: none;
 }
 
 .contest-form__achievements-content {
   display: flex;
+  margin-top: 30px;
 }
 
 .contest-form__achievements-content .contest-form__list {
@@ -74,15 +88,107 @@
   width: $width;
 }
 
+.contest-form__checkbox {
+  display: none;
+}
+
+.contest-form__label-checkbox {
+  margin-left: 70px;
+  font-size: 18px;
+  line-height: 30px;
+  color: $dark-blue;
+}
+
+input[type="checkbox"] + .contest-form__label-checkbox::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid #e5e5e5;
+  border-radius: 2px;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="checkbox"] + .contest-form__label-checkbox:hover::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $dark-blue;
+  border-radius: 2px;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="checkbox"] + .contest-form__label-checkbox:active::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $pink;
+  border-radius: 2px;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="checkbox"]:checked + .contest-form__label-checkbox::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid #e5e5e5;
+  border-radius: 2px;
+  background: #fff url("../img/icon-checkbox.svg") no-repeat center;
+  background-size: 22px auto;
+}
+
+input[type="checkbox"]:checked + .contest-form__label-checkbox:hover::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $dark-blue;
+  border-radius: 2px;
+  background: #fff url("../img/icon-checkbox.svg") no-repeat center;
+  background-size: 22px auto;
+}
+
+input[type="checkbox"]:checked + .contest-form__label-checkbox:active::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $pink;
+  border-radius: 2px;
+  background: #fff url("../img/icon-checkbox.svg") no-repeat center;
+  background-size: 22px auto;
+}
+
 .contest-form__app {
+  position: relative;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  padding-top: 35px;
   border-style: none;
 }
 
 .contest-form__app-content {
   display: flex;
+  margin-top: 30px;
 }
 
 .contest-form__app-content .contest-form__list {
@@ -91,22 +197,132 @@
   width: $width;
 }
 
+.contest-form__radio {
+  display: none;
+}
+
+.contest-form__list-item--radio {
+  margin-bottom: 45px;
+}
+
+.contest-form__label-radio {
+  margin-left: 70px;
+  font-size: 18px;
+  line-height: 30px;
+}
+
+input[type="radio"]:checked + .contest-form__label-radio::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid #e5e5e5;
+  border-radius: 50%;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="radio"]:checked + .contest-form__label-radio:hover::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $dark-blue;
+  border-radius: 50%;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="radio"]:checked + .contest-form__label-radio:active::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $pink;
+  border-radius: 50%;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="radio"]:checked + .contest-form__label-radio::after {
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: 12px;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: $pink;
+
+}
+
+input[type="radio"] + .contest-form__label-radio::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid #e5e5e5;
+  border-radius: 50%;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="radio"] + .contest-form__label-radio:hover::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $dark-blue;
+  border-radius: 50%;
+  background: #fff;
+  background-size: 22px auto;
+}
+
+input[type="radio"] + .contest-form__label-radio:active::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $pink;
+  border-radius: 50%;
+  background: #fff;
+  background-size: 22px auto;
+}
+
 .contest-form__emotions {
+  position: relative;
   box-sizing: border-box;
   @include container;
-  margin-top: 55px;
+  margin-top: 70px;
   padding: 0;
-  padding-bottom: 50px;
+  padding-top: 25px;
+  padding-bottom: 47px;
   border-style: none;
 }
 
 
 .contest-form__textarea {
   display: block;
+  box-sizing: border-box;
   width: $width;
+  min-height: 200px;
   margin: 0 auto;
-
+  padding-top: 13px;
+  padding-left: 20px;
   border: 2px solid #e5e5e5;
+  border-radius: 2px;
   font-family: inherit;
   font-size: 18px;
   line-height: 30px;
@@ -119,10 +335,12 @@
 }
 
 .contest-form__title {
-  width: 225px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 35px;
+  position: absolute;
+  left: 50%;
+  top: -12px;
+  width: 220px;
+  transform: translate(-50%, 0);
+
   font-size: 14px;
   font-weight: normal;
   line-height: 18px;
@@ -157,21 +375,29 @@
   flex-grow: 1;
   height: 63px;
   align-self: center;
-  margin-bottom: 20px;
-  padding-left: 23px;
+  margin-bottom: 19px;
+  padding-left: 22px;
   font-family: inherit;
   font-size: 18px;
   line-height: 30px;
+  border: 2px solid #e5e5e5;
+  border-radius: 2px;
+
+  &:hover {
+    border: 2px solid $dark-blue;
+  }
+
+  &:focus {
+    border: 2px solid $pink;
+    outline: none;
+  }
 }
 
-.contest-form__label-checkbox {
-  font-size: 18px;
-  line-height: 30px;
-  color: $dark-blue;
-}
+
 
 
 .contest-form__required {
+  margin-top: 35px;
   font-size: 14px;
   line-height: 30px;
   color: $dark-blue;
@@ -229,6 +455,7 @@
 
   .contest-form__title {
     width: auto;
+    background-color: #fff;
   }
 
   .contest-form__achievements {
@@ -276,6 +503,28 @@
     display: block;
     margin-left: 20px;
     margin-bottom: 40px;
+  }
+
+  .contest-form__icon-phone {
+    position: absolute;
+    display: block;
+    top: 2px;
+    right: 2px;
+    width: 60px;
+    height: 59px;
+    background: #e5e5e5 url("../img/icon-phone.svg") no-repeat center;
+    background-size: 20px auto;
+  }
+
+  .contest-form__icon-email {
+    position: absolute;
+    display: block;
+    top: 2px;
+    right: 2px;
+    width: 60px;
+    height: 59px;
+    background: #e5e5e5 url("../img/icon-mail.svg") no-repeat center;
+    background-size: 20px auto;
   }
 
   .contest-form__app {
