--- a/sass/blocks/hero-area.scss
+++ b/sass/blocks/hero-area.scss
@@ -1,9 +1,13 @@
 .hero-area {
+  width: 100%;
+  height: 462px;
   background-color: $dark-blue;
-}
-
-.hero-area__wrapper {
-  @include container;
+  background-image:
+    url("../img/iphone-hand-mobile@1x.png"),
+    url("../img/bg-back-mobile@1x.jpg");
+  background-position: bottom, center;
+  background-repeat: no-repeat;
+  background-size: 258px auto, cover;
 }
 
 .hero-area__message {
@@ -16,25 +20,74 @@
   text-align: center;
 }
 
+@media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+  .hero-area {
+    background-image:
+      url("../img/iphone-hand-mobile@2x.png"),
+      url("../img/bg-back-mobile@2x.jpg");
+  }
+}
+
+
 @media (min-width: 700px) {
   .hero-area {
-    min-height: 619px;
-    margin-top: -66px;
-    background: $dark-blue url("../img/bg-back-mobile@1x.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    margin-bottom: -350px;
+
+    height: 729px;
+    background-image:
+      url("../img/iphone-hand-tablet@1x.png"),
+      url("../img/bg-back-tablet@1x.jpg");
+    background-size: 700px auto, cover;
   }
 
-  .hero-area__wrapper {
+.hero-area__wrapper {
+    @include container;
     position: relative;
     padding-top: 100px;
+
   }
 
   .hero-area__message {
     display: block;
+    margin-top: 100px;
     width: 300px;
     font-size: 40px;
     line-height: 50px;
   }
 }
+
+@media (min-width: 700px) and (min-resolution: 144dpi),
+       (min-width: 700px) and (min-resolution: 1.5dppx) {
+
+  .hero-area {
+    background-image:
+      url("../img/iphone-hand-tablet@2x.png"),
+      url("../img/bg-back-tablet@2x.jpg");
+  }
+}
+
+@media (min-width: 1200px) {
+  .hero-area {
+    height: 853px;
+    margin-bottom: -400px;
+    background-image:
+      url("../img/iphone-hand-desktop@1x.png"),
+      url("../img/bg-back-desktop@1x.jpg");
+    background-size: 1050px auto, cover;
+  }
+
+
+}
+
+@media (min-width: 1200px) and (min-resolution: 144dpi),
+       (min-width: 1200px) and (min-resolution: 1.5dppx) {
+
+  .hero-area {
+    background-image:
+      url("../img/iphone-hand-desktop@2x.png"),
+      url("../img/bg-back-desktop@2x.jpg");
+  }
+}
+
+
+
