--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -3,7 +3,38 @@
   line-height: 32px;
   background-color: $dark-blue;
   color: #fff;
-  text-transform: uppercase;
+
+}
+
+.main-header--closed {
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.3);
+  margin-bottom: -66px;
+  z-index: 2;
+}
+
+
+@media (min-width: 700px) {
+  .main-header--closed {
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.3);
+    margin-bottom: -110px;
+    z-index: 2;
+  }
+}
+
+
+
+@media (min-width: 1200px) {
+  .main-header {
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.3);
+    margin-bottom: -110px;
+    z-index: 2;
+  }
+
+
+
 }
 
 
