--- a/sass/blocks/price.scss
+++ b/sass/blocks/price.scss
@@ -1,6 +1,6 @@
 .price {
   margin-bottom: 20px;
-  padding-top: 67px;
+  padding-top: 20px;
   padding-bottom: 40px;
   background-color: $grey-bg;
 }
@@ -8,7 +8,67 @@
 
 
 .price__radiobuttons {
+  margin-top: 20px;
   text-align: center;
+}
+
+.price__radio {
+  display: none;
+}
+
+.price__label {
+  position: relative;
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  margin-right: 16px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+
+input[type="radio"] + .price__label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 6px;
+  height: 6px;
+  background-color: rgba(40, 54, 69, 0.3);
+  border-radius: 50%;
+}
+
+input[type="radio"] + .price__label:hover::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 6px;
+  height: 6px;
+  background-color: rgba(40, 54, 69, 0.6);
+  border-radius: 50%;
+}
+
+input[type="radio"] + .price__label:active::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 6px;
+  height: 6px;
+  background-color: rgba(40, 54, 69, 0.1);
+  border-radius: 50%;
+}
+
+input[type="radio"]:checked + .price__label::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 6px;
+  height: 6px;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 3px solid $dark-blue;
 }
 
 @media (min-width: 700px) {
