--- a/sass/blocks/social.scss
+++ b/sass/blocks/social.scss
@@ -1,19 +1,49 @@
 .social {
-  min-height: 31px;
-  padding-top: 10px;
-  margin-bottom: 45px;
+  margin-bottom: 33px;
   text-align: center;
-  font-size: 14px;
+  font-size: 0;
 }
 
-.social-item {
+.social__item {
   display: inline-block;
   vertical-align: top;
+  box-sizing: border-box;
+  width: 51px;
+  height: 51px;
+  margin-right: 12px;
+  border: 3px solid rgba(40, 54, 69, 0.1);
+  border-radius: 50%;
+
+  &:hover {
+    border: 3px solid rgb(40, 54, 69);
+  }
+
+  &:active {
+    opacity: 0.3;
+    border: 3px solid rgba(40, 54, 69, 0.3);
+  }
+}
+
+.social__item:last-child {
+  margin-right: 0;
+}
+
+.social__item--twitter {
+  background: url("../img/icon-twitter.svg") no-repeat center;
+}
+
+.social__item--facebook {
+  background: url("../img/icon-facebook.svg") no-repeat center;
+}
+
+.social__item--youtube {
+  background: url("../img/icon-youtube.svg") no-repeat center;
 }
 
 @media (min-width: 700px) {
   .social {
     margin: 0;
+    align-self: flex-start;
   }
 }
 
