--- a/sass/blocks/download-btn.scss
+++ b/sass/blocks/download-btn.scss
@@ -1,5 +1,5 @@
 .download-btn {
-  margin-bottom: 30px;
+  margin-bottom: 34px;
   color: #fff;
   border: 3px solid #fff;
   text-align: center;
@@ -18,5 +18,13 @@
 @media (min-width: 700px) {
   .download-btn {
     width: 300px;
+  }
+}
+
+
+@media (min-width: 1200px) {
+  .download-btn {
+    font-size: 21px;
+    line-height: 21px;
   }
 }
