--- a/sass/blocks/hero-area.scss
+++ b/sass/blocks/hero-area.scss
@@ -2,12 +2,20 @@
   width: 100%;
   height: 462px;
   background-color: $dark-blue;
-  background-image:
-    url("../img/iphone-hand-mobile@1x.png"),
-    url("../img/bg-back-mobile@1x.jpg");
-  background-position: bottom, center;
+  background-image: url("../img/bg-back-mobile@1x.jpg");
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: 258px auto, cover;
+  background-size: cover;
+}
+
+.hero-area__wrapper {
+  @include container;
+  box-sizing: border-box;
+  height: 462px;
+  background-image: url("../img/iphone-hand-mobile@1x.png");
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 258px auto;
 }
 
 .hero-area__message {
@@ -22,29 +30,36 @@
 
 @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
   .hero-area {
-    background-image:
-      url("../img/iphone-hand-mobile@2x.png"),
-      url("../img/bg-back-mobile@2x.jpg");
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+  }
+
+  .hero-area__wrapper {
+    background-image: url("../img/iphone-hand-mobile@2x.png");
   }
 }
 
 
 @media (min-width: 700px) {
   .hero-area {
-    margin-bottom: -350px;
-
+    margin-bottom: -380px;
     height: 729px;
-    background-image:
-      url("../img/iphone-hand-tablet@1x.png"),
-      url("../img/bg-back-tablet@1x.jpg");
-    background-size: 700px auto, cover;
+
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-size: cover;
+    background-position: center;
   }
 
 .hero-area__wrapper {
+    position: relative;
+    z-index: 1;
+    height: 729px;
     @include container;
     position: relative;
     padding-top: 100px;
+    background-image: url("../img/iphone-hand-tablet@1x.png");
 
+    background-size: 700px auto;
+    background-position: bottom;
   }
 
   .hero-area__message {
@@ -60,20 +75,34 @@
        (min-width: 700px) and (min-resolution: 1.5dppx) {
 
   .hero-area {
-    background-image:
-      url("../img/iphone-hand-tablet@2x.png"),
-      url("../img/bg-back-tablet@2x.jpg");
+    background-image: url("../img/bg-back-tablet@2x.jpg");
+  }
+
+  .hero-area__wrapper {
+    background-image: url("../img/iphone-hand-tablet@2x.png");
   }
 }
 
 @media (min-width: 1200px) {
   .hero-area {
     height: 853px;
-    margin-bottom: -400px;
-    background-image:
-      url("../img/iphone-hand-desktop@1x.png"),
-      url("../img/bg-back-desktop@1x.jpg");
-    background-size: 1050px auto, cover;
+    margin-bottom: -430px;
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+    background-size: cover;
+    background-position: center;
+  }
+
+  .hero-area__message {
+    margin-top: 119px;
+    font-size: 50px;
+    line-height: 60px;
+  }
+
+  .hero-area__wrapper {
+    height: 853px;
+    background-image: url("../img/iphone-hand-desktop@1x.png");
+    background-size: 1050px auto;
+    background-position:  20px bottom;
   }
 
 
@@ -83,9 +112,11 @@
        (min-width: 1200px) and (min-resolution: 1.5dppx) {
 
   .hero-area {
-    background-image:
-      url("../img/iphone-hand-desktop@2x.png"),
-      url("../img/bg-back-desktop@2x.jpg");
+    background-image: url("../img/bg-back-desktop@2x.jpg");
+  }
+
+  .hero-area__wrapper {
+    background-image: url("../img/iphone-hand-desktop@2x.png");
   }
 }
 
