--- a/sass/blocks/popup.scss
+++ b/sass/blocks/popup.scss
@@ -1,4 +1,7 @@
 .popup {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   display: none;
   box-sizing: border-box;
   width: 320px;
@@ -6,6 +9,11 @@
   padding-top: 45px;
   margin: 0 auto;
   box-shadow: 0 3px 10px #d5d5d5;
+  background-color: #fff;
+}
+
+.popup-display {
+  display: block;
 }
 
 .popup__title {
@@ -48,7 +56,7 @@
 }
 
 @media (min-width: 1200px) {
-  .popup--wide {
+  .popup--success {
     width: 780px;
   }
 }
