--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -56,6 +56,11 @@
   background-size: 340px, auto;
 }
 
+.contacts__map iframe {
+  width: 100%;
+  height: 100%;
+}
+
 
 .contacts__map-triangle {
   position: absolute;
