--- a/sass/blocks/page-title.scss
+++ b/sass/blocks/page-title.scss
@@ -17,7 +17,8 @@
   text-align: center;
 }
 
-@media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+@media (max-width: 320px) and (min-resolution: 144dpi),
+       (max-width: 320px) and (min-resolution: 1.5dppx) {
   .page-title {
     background: $dark-blue url("../img/bg-back-mobile@2x.jpg") no-repeat center top;
   }
