--- a/sass/blocks/photo-edit.scss
+++ b/sass/blocks/photo-edit.scss
@@ -235,7 +235,8 @@
 
 @media (min-width: 1200px) {
   .photo-edit {
-    @include container;
+    width: 940px;
+    margin: 0 auto;
     margin-bottom: 100px;
   }
 
