--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -11,9 +11,11 @@
   margin: 0 auto;
   @media (min-width: 700px) {
     width: 620px;
+    margin: 0 auto
   }
   @media (min-width: 1200px) {
     width: 940px;
+    margin: 0 auto
   }
 }
 
