--- a/sass/blocks/contest-form.scss
+++ b/sass/blocks/contest-form.scss
@@ -703,6 +703,8 @@ input[type="radio"] + .contest-form__label-radio:active::before {
   }
 
   .contest-form__emotions {
+    margin-top: 62px;
+    margin-bottom: 68px;
     padding-bottom: 42px;
   }
 
@@ -742,183 +744,3 @@ input[type="radio"] + .contest-form__label-radio:active::before {
 
 
 
-
-/*@media (min-width: 700px) {
-  .contest-form__label-double {
-    display: block;
-  }
-
-  .contest-form__label {
-    display: none;
-  }
-
-  .contest-form__full-name {
-    font-size: 0;
-    order: 1;
-  }
-
-  .contest-form__full-name .contest-form__label {
-    display: inline-block;
-    margin-right: 18px;
-    margin-left: 0;
-  }
-
-  .contest-form__full-name .contest-form__input {
-    display: inline-block;
-    width: 525px;
-  }
-
-  .contest-form__full-name-wrapper:nth-child(2) .contest-form__input{
-    width: 565px;
-  }
-
-  .contest-form__app .contest-form__list {
-    margin-left: 60px;
-  }
-
-  .contest-form__app .contest-form__title {
-    width: 368px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #fff;
-  }
-
-  .contest-form__app {
-    width: 620px;
-    padding: 0;
-    padding-bottom: 35px;
-    background-color: #fff;
-    border: 2px solid #e5e5e5;
-    border-radius: 2px;
-    order: 2;
-  }
-
-  .contest-form__achievements {
-    @include container;
-    margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0;
-    padding-bottom: 35px;
-    background-color: #fff;
-    border: 2px solid #e5e5e5;
-    border-radius: 2px;
-    order: 4;
-  }
-
-  .contest-form__achievements .contest-form__list {
-    margin-left: 60px;
-  }
-
-  .contest-form__achievements .contest-form__title {
-    display: block;
-    width: 436px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #fff;
-  }
-
-  .contest-form__contacts {
-    border: 2px solid #e5e5e5;
-    border-radius: 2px;
-    order: 3;
-  }
-
-  .contest-form__contacts .contest-form__title {
-    display: block;
-    width: 260px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #fff;
-  }
-
-  .contest-form__contacts .contest-form__input {
-    width: 500px;
-  }
-
-  .contest-form__contacts .contest-form__label {
-    margin-left: 80px;
-  }
-
-  .contest-form__emotions {
-    border: 2px solid #e5e5e5;
-    border-radius: 2px;
-    order: 5;
-  }
-
-  .contest-form__emotions .contest-form__title {
-    width: 260px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #fff;
-  }
-
-  .contest-form__textarea {
-    width: 500px;
-  }
-
-
-  .form-btn {
-    float: left;
-  }
-
-  .contest-form__required {
-    float: right;
-  }
-
-}
-
-@media (min-width: 1200px) {
-  .contest-form__flex-wrapper {
-    width: 960px;
-    margin: 0 auto;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-
-  .contest-form__full-name {
-    width: 50%;
-  }
-
-  .contest-form__full-name .contest-form__input {
-    width: 340px;
-  }
-
-  .contest-form__full-name-wrapper:nth-child(2) .contest-form__input {
-    width: 380px;
-  }
-
-  .contest-form__app {
-    width: 50%;
-    margin: 0;
-  }
-
-  .contest-form__contacts {
-    font-size: 0;
-  }
-
-  .contest-form__contacts-wrapper {
-    display: inline-block;
-    margin-left: 60px;
-    margin-right: 70px;
-  }
-
-  .contest-form__contacts-wrapper:last-child {
-    margin-right: 0;
-    margin-left: 0;
-  }
-
-  .contest-form__contacts .contest-form__input {
-    width: 375px;
-  }
-
-  .contest-form__contacts .contest-form__label {
-    margin-left: 0;
-  }
-
-  .contest-form__textarea {
-    width: 820px;
-  }
-
-
-}*/
