--- a/sass/blocks/download.scss
+++ b/sass/blocks/download.scss
@@ -11,7 +11,6 @@
   margin-bottom: 20px;
   text-align: center;
   font-size: 0;
-
 }
 
 .download__apple {
@@ -20,7 +19,7 @@
   width: 47px;
   height: 56px;
   margin-right: 35px;
-  background: url(../img/logo-apple.svg) no-repeat;
+  background: #fff url(../img/logo-apple.svg) no-repeat;
 }
 
 .download__android {
@@ -29,7 +28,7 @@
   width: 43px;
   height: 47px;
   margin-right: 35px;
-  background: url(../img/logo-android.svg) no-repeat;
+  background: #a4c639 url(../img/logo-android.svg) no-repeat;
 }
 
 .download__windows {
@@ -37,7 +36,7 @@
   vertical-align: middle;
   width: 44px;
   height: 41px;
-  background: url(../img/logo-microsoft.svg) no-repeat;
+  background: #2dabe2 url(../img/logo-microsoft.svg) no-repeat;
 }
 
 .download__text {
@@ -50,6 +49,7 @@
 }
 
 @media (min-width: 700px) {
+
   .download {
     position: relative;
     z-index: 5;
@@ -73,6 +73,7 @@
 
 
 @media (min-width: 1200px) {
+
   .download {
     margin-left: -640px;
   }
