--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -50,10 +50,8 @@
   width: 100%;
   height: 200px;
   margin: 0 auto;
-  background:
-    url("../img/bg-triangle-white-footer.svg") no-repeat top center,
-    url("../img/bg-map-mobile@1x.png") no-repeat center;
-  background-size: 340px, auto;
+  background: #eae6dd url("../img/bg-map-mobile@1x.png") no-repeat center;
+  background-size: auto;
 }
 
 .contacts__map iframe {
@@ -71,6 +69,7 @@
 }
 
 @media (min-width: 700px) {
+
   .contacts__wrapper {
     width: 575px;
     flex-direction: row;
@@ -101,10 +100,8 @@
   .contacts__map {
     height: 378px;
     margin-bottom: 35px;
-    background:
-      url("../img/bg-triangle-white-footer.svg") no-repeat top center,
-      url("../img/bg-map-tablet@1x.jpg") no-repeat center;
-    background-size: 720px, auto;
+    background: #eae6dd url("../img/bg-map-tablet@1x.jpg") no-repeat center;
+    background-size: auto;
   }
 
   .contacts__map-triangle {
@@ -113,12 +110,12 @@
   }
 }
 
+
 @media (min-width: 1200px) {
   .contacts__text {
     font-size: 50px;
     line-height: 60px;
     margin-bottom: 55px;
-
   }
 
   .contacts__item:first-child {
@@ -144,16 +141,11 @@
 
   }
 
-
-
   .contacts__map {
     height: 500px;
     margin-bottom: 75px;
-    background:
-      url("../img/bg-triangle-white-footer.svg") no-repeat top center,
-      url("../img/bg-map-desktop@1x.jpg") no-repeat center;
-    background-size: 1200px, auto;
-
+    background: #eae6dd url("../img/bg-map-desktop@1x.jpg") no-repeat center;
+    background-size:  auto;
   }
 
   .contacts__map-triangle {
