--- a/sass/blocks/download.scss
+++ b/sass/blocks/download.scss
@@ -19,7 +19,7 @@
   width: 47px;
   height: 56px;
   margin-right: 35px;
-  background: #fff url(../img/logo-apple.svg) no-repeat;
+  background: url(../img/logo-apple.svg) no-repeat;
 }
 
 .download__android {
@@ -28,7 +28,7 @@
   width: 43px;
   height: 47px;
   margin-right: 35px;
-  background: #a4c639 url(../img/logo-android.svg) no-repeat;
+  background: url(../img/logo-android.svg) no-repeat;
 }
 
 .download__windows {
@@ -36,7 +36,7 @@
   vertical-align: middle;
   width: 44px;
   height: 41px;
-  background: #2dabe2 url(../img/logo-microsoft.svg) no-repeat;
+  background: url(../img/logo-microsoft.svg) no-repeat;
 }
 
 .download__text {
